users swagger
